// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`populateSNAP 1`] = `
Object {
  "payload": Array [
    Object {
      "address": "2550 Paulin Dr # 1, Santa Rosa, CA 95403, USA",
      "id": "ChIJWcnjX3c4hIAReEaEIu-h5Dg",
      "lat": 38.464769,
      "lng": -122.721573,
      "name": "Sonoma County Human Services Department",
      "phone_intl": "+1 877-699-6868",
      "phone_local": "(877) 699-6868",
    },
    Object {
      "address": "520 Mendocino Ave, Santa Rosa, CA 95402, USA",
      "id": "ChIJ2S8f1PhHhIARUVCsEnyrOEw",
      "lat": 38.443262,
      "lng": -122.715587,
      "name": "Sonoma County Economic Assistance 2",
      "phone_intl": "+1 877-699-6868",
      "phone_local": "(877) 699-6868",
    },
  ],
  "type": "POPULATE_SNAP_OFFICES",
}
`;

exports[`populateWIC 1`] = `
Object {
  "payload": Array [
    Object {
      "address": "11 English St, Petaluma, CA 94952, USA",
      "id": "ChIJ697sM6e2hYARGih3Xt7SAAE",
      "lat": 38.2319379,
      "lng": -122.6442755,
      "name": "WIC Petaluma",
      "phone_intl": "+1 800-816-3663",
      "phone_local": "(800) 816-3663",
    },
    Object {
      "address": "153 Stony Cir #100, Santa Rosa, CA 95401, USA",
      "id": "ChIJ8RLqxDw4hIARCChYAI7Tp20",
      "lat": 38.439528,
      "lng": -122.7437988,
      "name": "Volunteer Center of Sonoma County",
      "phone_intl": "+1 707-573-3399",
      "phone_local": "(707) 573-3399",
    },
    Object {
      "address": "1530 Solano Ave, Vallejo, CA 94590, USA",
      "id": "ChIJD2NWug1zhYARmELjE9P_loU",
      "lat": 38.1016731,
      "lng": -122.2390356,
      "name": "Prime Time Nutrition",
      "phone_intl": "+1 707-644-6600",
      "phone_local": "(707) 644-6600",
    },
    Object {
      "address": "8465 Old Redwood Hwy #320, Windsor, CA 95492, USA",
      "id": "ChIJ24DSyww-hIAROpzUsj2K5Zs",
      "lat": 38.5431579,
      "lng": -122.8017116,
      "name": "Alliance Medical Center",
      "phone_intl": "+1 707-433-5494",
      "phone_local": "(707) 433-5494",
    },
    Object {
      "address": "210 Hospital Dr, Vallejo, CA 94589, USA",
      "id": "ChIJy1-q0DRzhYARuIqXldjxVYw",
      "lat": 38.13150350000001,
      "lng": -122.2387657,
      "name": "La Clinica Vallejo Great Begin",
      "phone_intl": "+1 707-645-7316",
      "phone_local": "(707) 645-7316",
    },
  ],
  "type": "POPULATE_WIC_OFFICES",
}
`;

exports[`populateWICVendors 1`] = `
Object {
  "payload": Array [
    Object {
      "address": "2751 4th St, Santa Rosa, CA,  95404, USA",
      "id": "ChIJZ1aAHdxHhIARO2o8VNCrzvo",
      "lat": 38.450691,
      "lng": -122.69104,
      "name": "Safeway #1562",
    },
    Object {
      "address": "1680 Petaluma Hill Rd, Santa Rosa, CA,  95404, USA",
      "id": "ChIJD2VCHBhIhIAR-pleXyzr54s",
      "lat": 38.42281,
      "lng": -122.70693,
      "name": "Lola's Market",
    },
  ],
  "type": "POPULATE_WIC_VENDORS",
}
`;

exports[`setLanguagePreference 1`] = `
Object {
  "payload": "es",
  "type": "SET_LANGUAGE_PREFERENCE",
}
`;

exports[`toggleLocationProvided 1`] = `
Object {
  "payload": true,
  "type": "TOGGLE_LOCATION_PROVIDED",
}
`;

exports[`updateLocation 1`] = `
Object {
  "payload": Object {
    "latitude": 38.5386881,
    "latitudeDelta": 0.4,
    "longitude": -122.695547,
    "longitudeDelta": 0.4,
  },
  "type": "UPDATE_LOCATION",
}
`;

exports[`updateMapLoading 1`] = `
Object {
  "payload": false,
  "type": "TOGGLE_MAP_LOADING",
}
`;

exports[`updateOffice 1`] = `
Object {
  "payload": 1,
  "type": "UPDATE_OFFICE",
}
`;

exports[`updateOrientation 1`] = `
Object {
  "payload": Object {
    "fontScale": 1,
    "height": 683.4285714285714,
    "scale": 2.625,
    "width": 411.42857142857144,
  },
  "type": "UPDATE_ORIENTATION",
}
`;

exports[`updateWicEligibility 1`] = `
Object {
  "payload": 1,
  "type": "UPDATE_WIC_ELIGIBILITY",
}
`;

exports[`updateZipCode 1`] = `
Object {
  "payload": 95404,
  "type": "UPDATE_ZIPCODE",
}
`;
